Update 2. Intalling Ansible, configure control and managed node.md

--- a/2. Intalling Ansible, configure control and managed node.md
+++ b/2. Intalling Ansible, configure control and managed node.md
@@ -1,1 +1,73 @@
 
+# Install Ansible, Configure control and managed node
+
+### Ansile installation command:
+
+```
+sudo apt update
+sudo apt install software-properties-common -y
+sudo apt-add-repository --yes --update ppa:ansible/ansible
+sudo apt install ansible -y
+ansible --version
+
+```
+
+## what is control node?
+
+### A control node is a central server or machine that is responsible for managing and orchestrating the configuration of other nodes (managed nodes). It acts as the master
+
+## What is Managed Node?
+
+### A managed node is a server or machine that is being configured and managed by the control node. Managed nodes are also known as clients or agents
+
+#### 1. In Master node:
+```
+useradd controller
+passwd controller
+su controller
+```
+
+#### 2. In client node
+```
+ifconfig
+```
+
+#### 3. In Master node:
+```
+ping ipaddress
+vim /etc/hosts
+```
+- add the ipaddress in the below format
+
+```
+ipaddress and following with give any name of server, example: nodeserver
+ipaddress nodeserver
+```
+
+```
+# Password based authendication
+ping nodeserver  # test the connectivity
+ssh -i "key.pem" node1@nodeserver
+cat .ssh/known_hosts
+```
+- There you can see the node server fingerprint
+
+```
+# Passwordless authendication
+ssh-keygen      # generate public and private key
+ssh-copy-id "key.pem" node1@nodeserver  # copy the public to client machine
+```
+
+#### 4. In client node
+
+ - Now, we can the master node public key in client machine with the help of below file
+
+ ```
+cat ~/.ssh/authorized_keys
+
+```
+
+
+
+
+
